--- a/options.conf
+++ b/options.conf
@@ -8,9 +8,9 @@ SUDO_USER=sysadmin
 #Disable Root Login
 DISABLE_ROOT_LOGIN=no
 
-# Root password for MySQL or MariaDB UPDATE mysql.user SET authentication_string=PASSWORD('3Fewr10a21356428das65we') WHERE User='root';
+# Root password for MySQL
 # password must start with letter..
-MYSQL_ROOT_PASSWORD=MySqlPassw0rd3
+MYSQL_ROOT_PASSWORD=Dejmru37hsgbfy16gs
 
 # Only If you don't have enought memory on machine you can add Swap Memory if is not added.
 ADD_SWAP=yes
