MySQL pass strong geberate note

--- a/options.conf
+++ b/options.conf
@@ -10,7 +10,8 @@ DISABLE_ROOT_LOGIN=no
 
 # Root password for MySQL
 # password must start with letter..
-MYSQL_ROOT_PASSWORD=Dejmru37hsgbfy16gs
+# generate strong password by using: "gpg --gen-random --armor 1 18"
+MYSQL_ROOT_PASSWORD=ggAYiPpiIv5uhvonwMXVlvpR
 
 # Only If you don't have enought memory on machine you can add Swap Memory if is not added.
 ADD_SWAP=yes
