Fix some PHP Libraries

--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 # FQDN can be any domain that you own and doesn't have to be hosted on this server
-HOSTNAME=hostname
-HOSTNAME_FQDN=hostname.com
-SERVER_IP="0.0.0.0"
+HOSTNAME=ndmsolutions
+HOSTNAME_FQDN=ndmsolutions.com
+SERVER_IP="159.89.246.203"
 SSHD_PORT=22
 SUDO_USER=sysadmin
 
@@ -11,7 +11,7 @@ DISABLE_ROOT_LOGIN=no
 # Root password for MySQL
 # password must start with letter..
 # generate strong password by using: "gpg --gen-random --armor 1 18"
-MYSQL_ROOT_PASSWORD=ggAYiPpiIv5uhvonwMXVlvpR
+MYSQL_ROOT_PASSWORD=ggAYi?PpiIv5uhvonwMXVlvpR
 
 # Only If you don't have enought memory on machine you can add Swap Memory if is not added.
 ADD_SWAP=yes
@@ -27,12 +27,12 @@ DHPARAM_SETUP=1
 
 # Any other packages that you wish to install. Leave empty if nothing more is needed
 # Eg. MISC_PACKAGES="htop dnsutils vim tmux imagemagick"
-MISC_PACKAGES="snmp imagemagick libgd-tools liblcms2-utils libmagickcore-6.q16-2-extra libmcrypt-dev mcrypt memcached"
+MISC_PACKAGES="openssl libssl-dev libxml2-dev lynx lua-expat-dev libjansson-dev snmp imagemagick libgd-tools liblcms2-utils libmagickcore-6.q16-2-extra libmcrypt-dev mcrypt memcached"
 
 # Configure PHP. Recommended to leave PHP_BASE unchanged
 # You may safely remove all the modules in PHP_EXTRAS libapache2-mod-php
-PHP_BASE="php-fpm"
-PHP_EXTRAS="php-mysql php-curl php-gd php-pear php-imagick php-imap php-pspell php-recode php-mbstring php-gettext php-apcu"
+PHP_BASE="php php-fpm"
+PHP_EXTRAS="php-xml php-cli php-bcmath php-bz2 php-xmlrpc php-zip php-cgi php-common php-mysql php-curl php-gd php-pear php-imap php-mbstring"
 
 # Settings for php.ini
 PHP_MEMORY_LIMIT=256M
@@ -40,11 +40,11 @@ PHP_MAX_EXECUTION_TIME=3000
 PHP_MAX_INPUT_TIME=3000
 PHP_POST_MAX_SIZE=128M
 PHP_UPLOAD_MAX_FILESIZE=128M
+PHP_MAX_INPUT_VARS=3000
 
 # Settings for PHP5-FPM's pool
-FPM_MAX_CHILDREN=5
+FPM_MAX_CHILDREN=10
 FPM_START_SERVERS=1
 FPM_MIN_SPARE_SERVERS=1
-FPM_MAX_SPARE_SERVERS=2
-FPM_MAX_REQUESTS=5000
-
+FPM_MAX_SPARE_SERVERS=5
+FPM_MAX_REQUESTS=6000
