--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ pid /var/run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-        worker_connections 1024;
+        worker_connections 2048;
         multi_accept on;
 }
 
@@ -14,8 +14,9 @@ http {
         # Basic Settings
         ##
 
-        client_max_body_size 50m;
+        client_max_body_size 128m;
         client_header_timeout 5;
+        client_body_buffer_size 256k;
         keepalive_timeout 5;
         port_in_redirect off;
         sendfile on;
@@ -26,9 +27,6 @@ http {
         tcp_nopush on;
         tcp_nodelay on;
         types_hash_max_size 2048;
-
-        # server_names_hash_bucket_size 64;
-        # server_name_in_redirect off;
 
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
@@ -41,6 +39,16 @@ http {
         add_header X-Content-Type-Options nosniff;
         #add_header X-Frame-Options SAMEORIGIN;
         #add_header X-Frame-Options DENY;
+        
+        ##
+        # File Cache Settings
+        ##
+
+        open_file_cache          max=5000  inactive=20s;
+        open_file_cache_valid    30s;
+        open_file_cache_min_uses 2;
+        open_file_cache_errors   on;        
+        
         ##
         # SSL Settings
         ##
@@ -56,22 +64,19 @@ http {
         # Logging Settings
         ##
 
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
+        access_log off;
+        log_not_found off;
+        error_log /var/log/nginx-error.log warn;
 
         ##
         # Gzip Settings
         ##
 
         gzip on;
-        gzip_disable "msie6";
-
-        # gzip_vary on;
-        # gzip_proxied any;
-        # gzip_comp_level 6;
-        # gzip_buffers 16 8k;
-        # gzip_http_version 1.1;
-        # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_proxied any;
+        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_vary on;
+        gzip_disable “MSIE [1–6]\.(?!.*SV1)”;
 
         ##
         # Virtual Host Configs
